--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ xarray = "^2022.3.0"
 geopy = "^2.3.0"
 bs4 = "^0.0.1"
 geojsplit = "^0.1.2"
+pexpect = "^4.8.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
