--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ geopy = "^2.3.0"
 bs4 = "^0.0.1"
 geojsplit = "^0.1.2"
 pexpect = "^4.8.0"
+statsmodels = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
