feat: add flow de exemplo da formacao - caique

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,10 @@ dmypy.json
 # Backfill stuff
 backfill.csv
 REVIEW.md
+
+.idea
+misc.xml
+modules.xml
+pipelines.iml
+vsc.xml
+inspectionProfiles/
