add psycopg2-binary, remove psycopg2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,6 @@ geopy = "^2.3.0"
 bs4 = "^0.0.1"
 geojsplit = "^0.1.2"
 pexpect = "^4.8.0"
-psycopg2 = "^2.9.6"
 statsmodels = "^0.13.0"
 xgboost = "^1.7.4"
 scikit-learn = "^1.2.0"
@@ -60,6 +59,7 @@ opencv-python = "^4.6.0"
 kaleido = "0.2.1"
 haversine = "^2.6.0"
 plotly = "^5.14.0"
+psycopg2-binary = "^2.9.6"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
