Acrescenta Boris e Rodrigo como code owners da SMTR

--- a/code_owners.yaml
+++ b/code_owners.yaml
@@ -19,6 +19,7 @@ pipelines:
         - hellcassius
         - fernandascovino
         - eng-rodrigocunha
+        - borismarinho
     rj_escritorio:
       owners:
         - gabriel-milan
