changing scikit-learn to 1.2.1 version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ geojsplit = "^0.1.2"
 pexpect = "^4.8.0"
 statsmodels = "^0.13.0"
 xgboost = "^1.7.4"
-scikit-learn = "^1.2.0"
+scikit-learn = "==1.2.1"
 joblib = "^1.2.0"
 pyproj = "^3.4.0"
 h5py = "^3.7.0"
