fix(lint): install with pip instead

--- a/.github/workflows/lint_python.yaml
+++ b/.github/workflows/lint_python.yaml
@@ -18,7 +18,7 @@ jobs:
           pip install -U pip poetry
       - name: Install flows
         run: |
-          poetry install
+          pip install --prefer-binary .
       - name: Lint with flake8
         run: |
           poetry run lint
