--- a/.github/workflows/lint_python.yaml
+++ b/.github/workflows/lint_python.yaml
@@ -21,4 +21,4 @@ jobs:
           pip install --prefer-binary .
       - name: Lint with flake8
         run: |
-          poetry run lint
+          flake8 pipelines/**/*.py
