--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,60 +6,60 @@ name = "pipelines"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
-Shapely = "^1.8.1"
-Unidecode = "^1.3.6"
-basedosdados = "1.7.0b5"
-black = "20.8b1"
-croniter = "^1.3.5"
-cx-Oracle = "^8.3.0"
-dbt-client = "^0.1.3"
-earthengine-api = "^0.1.334"
-elasticsearch = "^8.2.0"
-geobr = "^0.1.10"
+PyMySQL = {extras = ["rsa"], version = "^1.0.2"} 
+Shapely = "^1.8.1" 
+Unidecode = "^1.3.6" 
+basedosdados = "2.0.0b5" 
+black = "20.8b1" 
+bs4 = "^0.0.1" 
+croniter = "^1.3.5" 
+cx-Oracle = "^8.3.0" 
+dbt-client = "^0.1.3" 
+earthengine-api = "^0.1.334" 
+elasticsearch = "^8.2.0" 
+geobr = "^0.1.10" 
+geojsplit = "^0.1.2" 
 geopandas = ">=0.7.0,<0.8.0" # This version range is due to `geobr` package
-google-api-python-client = "^2.56.0"
-gspread = "^5.5.0"
-html5lib = "^1.1"
-hvac = "0.11.2"
-loguru = "^0.6.0"
-lxml = "^4.9.1"
-matplotlib = "3.5.1"
-mlflow = {extras = ["extras"], version = "^1.28.0"}
-netCDF4 = "1.5.8"
-numpy = "1.22.0"
-pandas = "1.5.2"
-pandas-read-xml = "^0.3.1"
-pendulum = "2.1.2"
-phonenumbers = "^8.12.57"
-prefect = "0.15.9"
-pymssql = "^2.2.4"
-python = ">=3.8,<3.11"
-python-telegram-bot = "^13.11"
-pytz = "^2021.3"
-rasterio = "1.2.10"
-redis-pal = "1.0.0"
-requests = "^2.20"
-rioxarray = "0.9.0"
-s3fs = "^2022.2.0"
-scp = "^0.14.4"
-tweepy = "4.4"
-xarray = "^2022.6.0"
-geopy = "^2.3.0"
-bs4 = "^0.0.1"
-geojsplit = "^0.1.2"
-pexpect = "^4.8.0"
-statsmodels = "^0.13.0"
-xgboost = "^1.7.4"
-scikit-learn = "1.2.1"
-joblib = "^1.2.0"
-pyproj = "^3.4.0"
-h5py = "^3.7.0"
-opencv-python = "^4.6.0"
-kaleido = "0.2.1"
-haversine = "^2.6.0"
-plotly = "^5.14.0"
-google-cloud-pubsub = "^2.17.1"
+geopy = "^2.3.0" 
+google-api-python-client = "^2.56.0" 
+google-cloud-pubsub = "^2.17.1" 
+gspread = "^5.5.0" 
+h5py = "^3.7.0" 
+haversine = "^2.6.0" 
+html5lib = "^1.1" 
+hvac = "0.11.2" 
+joblib = "^1.2.0" 
+kaleido = "0.2.1" 
+loguru = "^0.7.0" 
+lxml = "^4.9.1" 
+matplotlib = "3.5.1" 
+mlflow = {extras = ["extras"], version = "^2.5.0"} 
+netCDF4 = "1.5.8" 
+numpy = "1.22.0" 
+opencv-python = "^4.6.0" 
+pandas = "2.0.3" 
+pandas-read-xml = "^0.3.1" 
+pendulum = "2.1.2" 
+pexpect = "^4.8.0" 
+phonenumbers = "^8.12.57" 
+plotly = "^5.14.0" 
+prefect = "0.15.9" 
+pymssql = "^2.2.4" 
+pyproj = "^3.4.0" 
+python = ">=3.8,<3.11" 
+python-telegram-bot = "^13.11" 
+pytz = "^2021.3" 
+rasterio = "1.2.10" 
+redis-pal = "1.0.0" 
+requests = "^2.20" 
+rioxarray = "0.9.0" 
+s3fs = "^2022.2.0" 
+scikit-learn = "1.2.1" 
+scp = "^0.14.4" 
+statsmodels = "^0.13.0" 
+tweepy = "4.4" 
+xarray = "^2022.6.0" 
+xgboost = "^1.7.4" 
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
@@ -73,7 +73,7 @@ pytest_cov = "^3.0.0"
 # optional = true
 
 # [tool.poetry.group.cli.dependencies]
-loguru = "^0.6.0"
+loguru = "^0.7.0"
 python-string-utils = {git = "https://github.com/daveoncode/python-string-utils.git", rev = "master"}
 typer = "^0.4.0"
 
@@ -81,7 +81,7 @@ typer = "^0.4.0"
 # optional = true
 
 # [tool.poetry.group.deploy.dependencies]
-google-cloud-storage = "1.42.3"
+google-cloud-storage = "^2.9.0"
 # loguru = "^0.6.0"
 # poetry = "^1.1.13"
 # prefect = "0.15.9"
