--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
 Shapely = "^1.8.1"
 Unidecode = "^1.3.6"
-basedosdados = "2.0.0b5"
+basedosdados = {version = "2.0.0b13", extras = ["upload"]}
 black = "20.8b1"
 bs4 = "^0.0.1"
 croniter = "^1.3.5"
@@ -46,7 +46,7 @@ plotly = "^5.14.0"
 prefect = "0.15.9"
 pymssql = "^2.2.4"
 pyproj = "^3.4.0"
-python = ">=3.8,<3.11"
+python = ">=3.8.1,<3.11"
 python-telegram-bot = "^13.11"
 pytz = "^2021.3"
 rasterio = "1.2.10"
