--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
 Shapely = "^1.8.1"
 Unidecode = "^1.3.6"
-basedosdados = {version = "2.0.0b13", extras = ["upload"]}
+basedosdados = {version = "2.0.0b14", extras = ["upload"]}
 black = "20.8b1"
 bs4 = "^0.0.1"
 croniter = "^1.3.5"
@@ -49,7 +49,7 @@ pyproj = "^3.4.0"
 python = ">=3.8.1,<3.11"
 python-telegram-bot = "^13.11"
 pytz = "^2021.3"
-rasterio = "1.2.10"
+rasterio = "1.3a3"
 redis-pal = "1.0.0"
 requests = "^2.20"
 rioxarray = "0.9.0"
