add carol e rafa como code owners

--- a/code_owners.yaml
+++ b/code_owners.yaml
@@ -20,6 +20,8 @@ pipelines:
         - fernandascovino
         - eng-rodrigocunha
         - borismarinho
+        - pixuimpou
+        - lingsv
     rj_escritorio:
       owners:
         - gabriel-milan
