--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,8 @@ tweepy = "4.4"
 xarray = "^2022.6.0"
 xgboost = "^1.7.4"
 azure-storage-blob = "^12.17.0"
+icecream = "^2.1.3"
+pycurl = "^7.45.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
