atualização de arquivos

--- a/code_owners.yaml
+++ b/code_owners.yaml
@@ -19,6 +19,9 @@ pipelines:
         - hellcassius
         - fernandascovino
         - eng-rodrigocunha
+        - borismarinho
+        - pixuimpou
+        - lingsv
     rj_escritorio:
       owners:
         - gabriel-milan
