--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,13 @@ replit.nix
 test_local.py
 pylint.txt
 test.py
+test/*
+test/*.ipynb
+test/*.csv
 setup.py
+.vscode/*
+*.hdf
+*.DS_Store
 
 
 # Byte-compiled / optimized / DLL files
