--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
 Shapely = "^1.8.1"
 Unidecode = "^1.3.6"
-basedosdados = {version = "2.0.0b14", extras = ["upload"]}
+basedosdados = "2.0.0b5"
 black = "20.8b1"
 bs4 = "^0.0.1"
 croniter = "^1.3.5"
@@ -46,10 +46,10 @@ plotly = "^5.14.0"
 prefect = "0.15.9"
 pymssql = "^2.2.4"
 pyproj = "^3.4.0"
-python = ">=3.8.1,<3.11"
+python = ">=3.8,<3.11"
 python-telegram-bot = "^13.11"
 pytz = "^2021.3"
-rasterio = "1.3a3"
+rasterio = "1.2.10"
 redis-pal = "1.0.0"
 requests = "^2.20"
 rioxarray = "0.9.0"
@@ -60,8 +60,7 @@ statsmodels = "^0.13.0"
 tweepy = "4.4"
 xarray = "^2022.6.0"
 xgboost = "^1.7.4"
-azure-storage-blob = "^12.17.0"
-icecream = "^2.1.3"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
