--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,6 @@ pexpect = "^4.8.0"
 phonenumbers = "^8.12.57"
 plotly = "^5.14.0"
 prefect = "0.15.9"
-pymssql = "^2.2.4"
 pyproj = "^3.4.0"
 python = ">=3.8.1,<3.11"
 python-telegram-bot = "^13.11"
@@ -63,6 +62,7 @@ xgboost = "^1.7.4"
 psycopg2-binary = "^2.9.9"
 azure-storage-blob = "^12.17.0"
 icecream = "^2.1.3"
+pyodbc = "^5.0.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
