--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,12 @@ jobs:
         continue-on-error: true
         run: |
           python .github/workflows/scripts/code_tree_analysis.py "${{ steps.files.outputs.all }}"
+      - name: Delete previous comments
+        uses: izhangzhihao/delete-comment@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          delete_user_name: github-actions[bot]
+          issue_number: ${{ github.event.number }}  # remove comments from the current PR
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
         with:
