--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ azure-storage-blob = "^12.17.0"
 icecream = "^2.1.3"
 pyodbc = "^5.0.1"
 h3 = "^3.7.6"
+aiohttp = "^3.8.6"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
