--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ icecream = "^2.1.3"
 pyodbc = "^5.0.1"
 h3 = "^3.7.6"
 dask = "^2023.11.0"
+cartopy = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
